--- a/css/main.scss
+++ b/css/main.scss
@@ -68,13 +68,15 @@ h1, h2, h3 {
 }
 h1 {
     font-size: 45px;
+    font-weight:bold;
 }
 h1.dark {
     @extend h1;
     color:$blue;   
 }
 h2 {
-    font-size:30px;
+    font-weight:bold;
+    font-size:38px;
     color:$blue;
 }
 h2.light {
@@ -82,7 +84,7 @@ h2.light {
     color:$white;
 }
 h3 {
-    font-size:24px;
+    font-size:26px;
 }
 h3.light {
     color:$white;
@@ -91,17 +93,25 @@ h3.light {
 
 /*BUTTONS*/
 .button {
+    font-family: $roboto-font-stack;
+    text-transform: uppercase;
     text-decoration:none;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.4);
     display:inline-block;
     max-width:150px;
     font-family: $roboto-font-stack;
     text-align:center;
-    font-size:24px;
+    font-size:20px;
     padding:10px 20px;
     margin:auto;
     margin:10px;
+    min-width: 150px;
+    letter-spacing: .2px;
+         &:hover {
+        box-shadow: 1px 1px 8px rgba(0,0,0,0.6);
+    }
 }
+
 .dark-button {
     @extend .button;
     color: $white;
@@ -129,7 +139,7 @@ h3.light {
 }
 /*CUSTOM*/
 .border-bottom-red {
-    border-bottom: 2px solid $red;
+    border-bottom: 4px solid $red;
 }
 .main {
     text-align: center;
@@ -158,7 +168,7 @@ h3.light {
 /*MEDIA QUERIES*/
 @media(min-width:767px){
     h1 {
-        font-size: 55px;
+        font-size: 60px;
     }
     .two-col {
         width:50%;
@@ -177,6 +187,9 @@ h3.light {
     .bottom {
         min-height:38vh;
         @include flexbox();
+        h3 {
+            margin-bottom:15px;
+        }
     }
     .logo {
         margin:10px;
