--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ h1, h1.dark, h2, h3 {
   line-height: 1.3em; }
 
 h1, h1.dark {
-  font-size: 45px;
+  font-size: 40px;
   font-weight: bold; }
 
 h1.dark {
@@ -443,6 +443,10 @@ h3.light {
   padding: 60px 0; }
 
 /*CUSTOM*/
+.inner-wrapper {
+  max-width: 80%;
+  margin: auto; }
+
 .border-bottom-red {
   border-bottom: 4px solid #ed3443; }
 
@@ -488,7 +492,7 @@ h3.light {
 /*MEDIA QUERIES*/
 @media (min-width: 767px) {
   h1, h1.dark {
-    font-size: 60px; }
+    font-size: 45px; }
 
   .two-col {
     width: 50%;
